--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@
     <title>Frontend Mentor | Galleria slideshow site</title>
   </head>
   <body>
-    <header class="header">
-      <img class="logo" src="assets/shared/logo.svg" alt="logo" width="113" height="32" />
+    <header class="header container container--pall">
+      <img
+        class="logo"
+        src="assets/shared/logo.svg"
+        alt="logo"
+        width="113"
+        height="32"
+      />
       <a class="slideshow-toggle">Start Slideshow</a>
     </header>
 
-    <main class="main"></main>
-    Starry Night Vincent Van Gogh Girl with a Pearl Earring Johannes Vermeer
-    Guernica Pablo Picasso Penitent Magdalene Artemisia Gentileschi The Storm on
-    the Sea of Galilee Rembrandt The Great Wave off Kanagawa Hokusai Van Gogh
-    Self-portrait Vincent Van Gogh The Sleeping Gypsy Henri Rousseau Lady with
-    an Ermine Leonardo da Vinci The Night Café Vincent Van Gogh The Basket of
-    Apples Paul Cézanne The Boy in the Red Vest Paul Cézanne Arnolfini Portrait
-    Jan van Eyck Mona Lisa Leonardo da Vinci The Swing Jean-Honoré Fragonard
+    <main class="main container container--pall">
+      Starry Night Vincent Van Gogh Girl with a Pearl Earring Johannes Vermeer
+      Guernica Pablo Picasso Penitent Magdalene Artemisia Gentileschi The Storm
+      on the Sea of Galilee Rembrandt The Great Wave off Kanagawa Hokusai Van
+      Gogh Self-portrait Vincent Van Gogh The Sleeping Gypsy Henri Rousseau Lady
+      with an Ermine Leonardo da Vinci The Night Café Vincent Van Gogh The
+      Basket of Apples Paul Cézanne The Boy in the Red Vest Paul Cézanne
+      Arnolfini Portrait Jan van Eyck Mona Lisa Leonardo da Vinci The Swing
+      Jean-Honoré Fragonard
+    </main>
   </body>
 </html>
