create thumbnail component

--- a/index.html
+++ b/index.html
@@ -32,14 +32,201 @@
     </header>
 
     <main class="main container container--pall">
-      Starry Night Vincent Van Gogh Girl with a Pearl Earring Johannes Vermeer
-      Guernica Pablo Picasso Penitent Magdalene Artemisia Gentileschi The Storm
-      on the Sea of Galilee Rembrandt The Great Wave off Kanagawa Hokusai Van
-      Gogh Self-portrait Vincent Van Gogh The Sleeping Gypsy Henri Rousseau Lady
-      with an Ermine Leonardo da Vinci The Night Café Vincent Van Gogh The
-      Basket of Apples Paul Cézanne The Boy in the Red Vest Paul Cézanne
-      Arnolfini Portrait Jan van Eyck Mona Lisa Leonardo da Vinci The Swing
-      Jean-Honoré Fragonard
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img src="assets/starry-night/thumbnail.jpg" alt="Starry Night" />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">Starry Night</h2>
+          <h5 class="subhead-2">Vincent Van Gogh</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/girl-with-pearl-earring/thumbnail.jpg"
+            alt="Girl with a Pearl Earring"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">Girl with a Pearl Earring</h2>
+          <h5 class="subhead-2">Johannes Vermeer</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img src="assets/guernica/thumbnail.jpg" alt="Guernica" />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">Guernica</h2>
+          <h5 class="subhead-2">Pablo Picasso</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/penitent-magdalene/thumbnail.jpg"
+            alt="Penitent Magdalene"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">Penitent Magdalene</h2>
+          <h5 class="subhead-2">Artemisia Gentileschi</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/the-storm-on-the-sea-of-galilee/thumbnail.jpg"
+            alt="The Storm on the Sea of Galilee"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">The Storm on the Sea of Galilee</h2>
+          <h5 class="subhead-2">Rembrandt</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/the-great-wave-off-kanagawa/thumbnail.jpg"
+            alt="The Great Wave off Kanagawa"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">The Great Wave off Kanagawa</h2>
+          <h5 class="subhead-2">Hokusai</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/van-gogh-self-portrait/thumbnail.jpg"
+            alt="Van Gogh self-portrait"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">Van Gogh self&#8209portrait</h2>
+          <h5 class="subhead-2">Vincent Van Gogh</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/the-sleeping-gypsy/thumbnail.jpg"
+            alt="The Sleeping Gypsy"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">The Sleeping Gypsy</h2>
+          <h5 class="subhead-2">Henri Rousseau</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/lady-with-an-ermine/thumbnail.jpg"
+            alt="Lady with an Ermin"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">Lady with an Ermin</h2>
+          <h5 class="subhead-2">Leonardo da Vinci</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img src="assets/the-night-cafe/thumbnail.jpg" alt="The Night Café" />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">The Night Café</h2>
+          <h5 class="subhead-2">Vincent Van Gogh</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/the-basket-of-apples/thumbnail.jpg"
+            alt="The Basket of Apples"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">The Basket of Apples</h2>
+          <h5 class="subhead-2">Paul Cézanne</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/the-boy-in-the-red-vest/thumbnail.jpg"
+            alt="The Boy in the Red Vest"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">The Boy in the Red Vest</h2>
+          <h5 class="subhead-2">Edward Hopper</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img
+            src="assets/arnolfini-portrait/thumbnail.jpg"
+            alt="Arnolfini Portrait"
+          />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">Arnolfini Portrait</h2>
+          <h5 class="subhead-2">Jan van Eyck</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img src="assets/mona-lisa/thumbnail.jpg" alt="Mona Lisa" />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">Mona Lisa</h2>
+          <h5 class="subhead-2">Leonardo da Vinci</h5>
+        </div>
+      </div>
+
+      <div class="thumbnail">
+        <div class="thumbnail__img-wrapper">
+          <img src="assets/the-swing/thumbnail.jpg" alt="The Swing" />
+        </div>
+        <div class="thumbnail__mask"></div>
+        <div class="thumbnail__text">
+          <h2 class="heading-2">The Swing</h2>
+          <h5 class="subhead-2">Jean-Honoré Fragonard</h5>
+        </div>
+      </div>
+      
     </main>
   </body>
 </html>
