add masonry container

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="slideshow-toggle">Start Slideshow</a>
     </header>
 
-    <main class="main container container--pall">
+    <main class="masonry-container container container--pall">
       <div class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img src="assets/starry-night/thumbnail.jpg" alt="Starry Night" />
@@ -228,5 +228,7 @@
       </div>
       
     </main>
+
+    <script src="app/js/masonry.js"></script>
   </body>
 </html>
