starry night markup

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         width="113"
         height="32"
       />
-      <a class="slideshow-toggle">Start Slideshow</a>
+      <a href="starry-night.html" class="slideshow-toggle">Start Slideshow</a>
     </header>
 
     <main class="masonry-container container container--pall">
@@ -215,7 +215,7 @@
           <h5 class="subhead-2">Paul Cézanne</h5>
         </div>
       </div>
-      
+
       <div class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img src="assets/the-swing/thumbnail.jpg" alt="The Swing" />
