--- a/starry-night.html
+++ b/starry-night.html
@@ -1,36 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Galleria slideshow site</title>
-</head>
-<body>
-  Stop slideshow
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="app/scss/style.css" />
+    <title>Frontend Mentor | Galleria slideshow site</title>
+  </head>
+  <body>
+    <header class="header container container--pall">
+      <img
+        class="logo"
+        src="assets/shared/logo.svg"
+        alt="logo"
+        width="113"
+        height="32"
+      />
+      <a class="slideshow-toggle">Stop Slideshow</a>
+    </header>
 
-  View image
-  <!-- Modal start -->
-  Close
-  <!-- Modal end -->
+    View image
+    <!-- Modal start -->
+    Close
+    <!-- Modal end -->
 
-  Starry Night
-  Vincent Van Gogh
-
-  1889
-  Although The Starry Night was painted during the day in Van Gogh's ground-floor 
-  studio, it would be inaccurate to state that the picture was painted from memory. 
-  The view has been identified as the one from his bedroom window, facing east, a 
-  view which Van Gogh painted variations of no fewer than twenty-one times, including 
-  The Starry Night. "Through the iron-barred window," he wrote to his brother, Theo, 
-  around 23 May 1889, "I can see an enclosed square of wheat ... above which, in the 
-  morning, I watch the sun rise in all its glory."
-
-  Go to source <!-- URL: https://en.wikipedia.org/wiki/The_Starry_Night -->
-
-  Starry Night
-  Vincent Van Gogh
-</body>
+    <main class="container container-pall">
+      <section class="art">
+        <picture>
+          <img src="assets/starry-night/hero-small.jpg" alt="Starry Night" />
+        </picture>
+        <div class="art__text">
+          <h1 class="heading-2">Starry Night</h1>
+          <h4 class="subhead-1">Vincent Van Gogh</h4>
+        </div>
+        <img src="assets/starry-night/artist.jpg" alt="Van Gogh" />
+      </section>
+      <section class="description">
+        <p class="display">1889</p>
+        <p>
+          Although The Starry Night was painted during the day in Van Gogh's
+          ground-floor studio, it would be inaccurate to state that the picture
+          was painted from memory. The view has been identified as the one from
+          his bedroom window, facing east, a view which Van Gogh painted
+          variations of no fewer than twenty-one times, including The Starry
+          Night. "Through the iron-barred window," he wrote to his brother,
+          Theo, around 23 May 1889, "I can see an enclosed square of wheat ...
+          above which, in the morning, I watch the sun rise in all its glory."
+        </p>
+        <a
+          href="https://en.wikipedia.org/wiki/The_Starry_Night"
+          target="_blank"
+          class="link-2"
+          >Go to source</a
+        >
+      </section>
+    </main>
+  </body>
 </html>
