detail description mobile layout

--- a/starry-night.html
+++ b/starry-night.html
@@ -64,7 +64,7 @@
         />
       </section>
       <section class="description">
-        <p class="display">1889</p>
+        <p class="year display-font">1889</p>
         <p>
           Although The Starry Night was painted during the day in Van Gogh's
           ground-floor studio, it would be inaccurate to state that the picture
