--- a/starry-night.html
+++ b/starry-night.html
@@ -83,5 +83,35 @@
         >
       </section>
     </main>
+    <footer class="slideshow">
+      <div class="slideshow__name">
+        <p>Starry Night</p>
+        <p>Vincent Van Gogh</p>
+      </div>
+      <div class="slideshow__controls">
+        <div id="prev" class="slideshow__controls__prev">
+          <svg width="26" height="24" xmlns="http://www.w3.org/2000/svg">
+            <g stroke="#000" fill="none" fill-rule="evenodd">
+              <path
+                d="M24.166 1.843L3.627 12.113l20.539 10.269V1.843z"
+                stroke-width="2"
+              />
+              <path fill="#D8D8D8" d="M.986.5h-1v22.775h1z" />
+            </g>
+          </svg>
+        </div>
+        <div id="next" class="slideshow__controls__next">
+          <svg width="26" height="24" xmlns="http://www.w3.org/2000/svg">
+            <g stroke="#000" fill="none" fill-rule="evenodd">
+              <path
+                d="M1.528 1.843l20.538 10.27L1.528 22.382V1.843z"
+                stroke-width="2"
+              />
+              <path fill="#D8D8D8" d="M24.708.5h1v22.775h-1z" />
+            </g>
+          </svg>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
