footer tablet layout

--- a/starry-night.html
+++ b/starry-night.html
@@ -85,8 +85,8 @@
     </main>
     <footer class="slideshow">
       <div class="slideshow__name">
-        <p>Starry Night</p>
-        <p>Vincent Van Gogh</p>
+        <p class="slideshow__name__piece">Starry Night</p>
+        <p class="slideshow__name__author">Vincent Van Gogh</p>
       </div>
       <div class="slideshow__controls">
         <div id="prev" class="slideshow__controls__prev">
