--- a/starry-night.html
+++ b/starry-night.html
@@ -28,7 +28,7 @@
         width="113"
         height="32"
       />
-      <a class="slideshow-toggle">Stop Slideshow</a>
+      <a href="index.html" class="slideshow-toggle">Stop Slideshow</a>
     </header>
 
     <!-- Modal Start -->
@@ -100,7 +100,7 @@
         <p class="slideshow__name__author">Vincent Van Gogh</p>
       </div>
       <div class="slideshow__controls">
-        <div id="prev" class="slideshow__controls__prev">
+        <a href="the-swing.html" id="prev" class="slideshow__controls__prev">
           <svg width="26" height="24" xmlns="http://www.w3.org/2000/svg">
             <g stroke="#000" fill="none" fill-rule="evenodd">
               <path
@@ -110,8 +110,12 @@
               <path fill="#D8D8D8" d="M.986.5h-1v22.775h1z" />
             </g>
           </svg>
-        </div>
-        <div id="next" class="slideshow__controls__next">
+        </a>
+        <a
+          href="girl-with-pearl-earring.html"
+          id="next"
+          class="slideshow__controls__next"
+        >
           <svg width="26" height="24" xmlns="http://www.w3.org/2000/svg">
             <g stroke="#000" fill="none" fill-rule="evenodd">
               <path
@@ -121,7 +125,7 @@
               <path fill="#D8D8D8" d="M24.708.5h1v22.775h-1z" />
             </g>
           </svg>
-        </div>
+        </a>
       </div>
     </footer>
 
