add links on homepage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <main class="masonry-container container container--pall">
-      <div class="thumbnail">
+      <a href="starry-night.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img src="assets/starry-night/thumbnail.jpg" alt="Starry Night" />
         </div>
@@ -41,9 +41,9 @@
           <h2 class="heading-2">Starry Night</h2>
           <h5 class="subhead-2">Vincent Van Gogh</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="the-storm-on-the-sea-of-galilee.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/the-storm-on-the-sea-of-galilee/thumbnail.jpg"
@@ -55,9 +55,9 @@
           <h2 class="heading-2">The Storm on the Sea of Galilee</h2>
           <h5 class="subhead-2">Rembrandt</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="lady-with-an-ermine.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/lady-with-an-ermine/thumbnail.jpg"
@@ -69,9 +69,9 @@
           <h2 class="heading-2">Lady with an Ermin</h2>
           <h5 class="subhead-2">Leonardo da Vinci</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="the-boy-in-the-red-vest.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/the-boy-in-the-red-vest/thumbnail.jpg"
@@ -83,9 +83,9 @@
           <h2 class="heading-2">The Boy in the Red Vest</h2>
           <h5 class="subhead-2">Edward Hopper</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="girl-with-pearl-earring.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/girl-with-pearl-earring/thumbnail.jpg"
@@ -97,9 +97,9 @@
           <h2 class="heading-2">Girl with a Pearl Earring</h2>
           <h5 class="subhead-2">Johannes Vermeer</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="the-great-wave-off-kanagawa.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/the-great-wave-off-kanagawa/thumbnail.jpg"
@@ -111,9 +111,9 @@
           <h2 class="heading-2">The Great Wave off Kanagawa</h2>
           <h5 class="subhead-2">Hokusai</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="the-night-cafe.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img src="assets/the-night-cafe/thumbnail.jpg" alt="The Night Café" />
         </div>
@@ -122,9 +122,9 @@
           <h2 class="heading-2">The Night Café</h2>
           <h5 class="subhead-2">Vincent Van Gogh</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="arnolfini-portrait.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/arnolfini-portrait/thumbnail.jpg"
@@ -136,9 +136,9 @@
           <h2 class="heading-2">Arnolfini Portrait</h2>
           <h5 class="subhead-2">Jan van Eyck</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="guernica.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img src="assets/guernica/thumbnail.jpg" alt="Guernica" />
         </div>
@@ -147,9 +147,9 @@
           <h2 class="heading-2">Guernica</h2>
           <h5 class="subhead-2">Pablo Picasso</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="van-gogh-self-portrait.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/van-gogh-self-portrait/thumbnail.jpg"
@@ -161,9 +161,9 @@
           <h2 class="heading-2">Van Gogh self&#8209portrait</h2>
           <h5 class="subhead-2">Vincent Van Gogh</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="mona-lisa.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img src="assets/mona-lisa/thumbnail.jpg" alt="Mona Lisa" />
         </div>
@@ -172,9 +172,9 @@
           <h2 class="heading-2">Mona Lisa</h2>
           <h5 class="subhead-2">Leonardo da Vinci</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="penitent-magdalene.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/penitent-magdalene/thumbnail.jpg"
@@ -186,9 +186,9 @@
           <h2 class="heading-2">Penitent Magdalene</h2>
           <h5 class="subhead-2">Artemisia Gentileschi</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="the-sleeping-gypsy.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/the-sleeping-gypsy/thumbnail.jpg"
@@ -200,9 +200,9 @@
           <h2 class="heading-2">The Sleeping Gypsy</h2>
           <h5 class="subhead-2">Henri Rousseau</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="the-basket-of-apples.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img
             src="assets/the-basket-of-apples/thumbnail.jpg"
@@ -214,9 +214,9 @@
           <h2 class="heading-2">The Basket of Apples</h2>
           <h5 class="subhead-2">Paul Cézanne</h5>
         </div>
-      </div>
+      </a>
 
-      <div class="thumbnail">
+      <a href="the-swing.html" class="thumbnail">
         <div class="thumbnail__img-wrapper">
           <img src="assets/the-swing/thumbnail.jpg" alt="The Swing" />
         </div>
@@ -225,10 +225,8 @@
           <h2 class="heading-2">The Swing</h2>
           <h5 class="subhead-2">Jean-Honoré Fragonard</h5>
         </div>
-      </div>
+      </a>
       
     </main>
-
-    <script src="app/js/masonry.js"></script>
   </body>
 </html>
