add slideshow effect

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Frontend Mentor | Galleria slideshow site</title>
   </head>
   <body>
-    <header class="header container container--pall">
+    <header class="header container container--pall no-border">
       <img
         class="logo"
         src="assets/shared/logo.svg"
